--- a/styles.css
+++ b/styles.css
@@ -90,9 +90,11 @@ h5 span {
 }
 .keyProfileInfo h2 {
   margin: 0;
+  text-shadow: 0px 11px 22px rgba(22, 6, 53, 0.6);
 }
 .keyProfileInfo h5 {
   margin: 0;
+  text-shadow: 0px 11px 22px rgba(22, 6, 53, 0.6);
 }
 .keyProfileInfo h5 span {
   font-weight: 700;
@@ -181,7 +183,15 @@ img {
   transition-duration: 0.1s;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
+  .container{
+    flex-direction: column;
+    gap: 15px;
+  }
+ .blurBg{
+  gap: 5px;
+  padding: 10px;
+ }
   .headInfo button {
     padding: 0 2.6rem;
   }
