--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ body {
 
 .keyProfileInfo h2 {
   color: white;
-  font-size: xx-large;
+  font-size: 2.5rem;
 }
 .keyProfileInfo h5 {
   color: white;
@@ -146,6 +146,8 @@ img {
   text-align: center;
   font-size: 30px;
   font-weight: 800;
+  color: #673fd7;
+  text-shadow: 0px 0px 30px rgba(22, 6, 53, 0.6);
 }
 .headInfo button {
   background-image: linear-gradient(
@@ -184,14 +186,18 @@ img {
 }
 
 @media (max-width: 768px) {
-  .container{
+  .container {
     flex-direction: column;
     gap: 15px;
   }
- .blurBg{
-  gap: 5px;
-  padding: 10px;
- }
+  .keyProfileInfo h2 {
+    color: white;
+    font-size: 2rem;
+  }
+  .blurBg {
+    gap: 5px;
+    padding: 10px;
+  }
   .headInfo button {
     padding: 0 2.6rem;
   }
